# ai_safety

./: .gitignore  CHANGES_FOR_PAPER.md  CLAUDE.MD  PAPER_ALIGNMENT.md  PAPER_PREPARATION_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_SUMMARY.md  README.md  RESULTS_SUMMARY.md  RUN_EVALUATION.md  env.example  model_integration.md  pyproject.toml  requirements.txt  setup.py  verify_setup.py
data/: advbench_harmful.jsonl  jailbreakbench_attacks.jsonl  paper_sources.txt  paper_sources_expanded.txt  questions.jsonl  questions_benign.jsonl  questions_harmful.jsonl
data/papers/: paper_001.txt  paper_001_llm_safety.txt  paper_002.txt  paper_002_llm_safety.txt  paper_003.txt  paper_003_llm_safety.txt  paper_004.txt  paper_004_llm_safety.txt  paper_005.txt  paper_005_llm_safety.txt  paper_006.txt  paper_006_llm_safety.txt  paper_007.txt  paper_007_llm_safety.txt  paper_008.txt  paper_008_control.txt
data/papers_processed/: paper_001_processed.txt  paper_002_processed.txt  paper_003_processed.txt  paper_004_processed.txt  paper_005_processed.txt  paper_006_processed.txt  paper_007_processed.txt  paper_008_processed.txt
docs/: DEFENSES.md
experiments/: RESEARCH_NOTES.md
scripts/: build_paper_contexts.py  download_arxiv_papers.py  download_papers.py  extract_arxiv_text.py  make_report.py  prepare_papers_psa.py  prepare_questions.py  run_ablation.py  run_comprehensive_eval.py  run_defense_eval.py  run_eval.py  run_full_pipeline.py  run_hypotheses_eval.py  run_multimodel.py
src/papershield/: __init__.py  adaptive_attack.py  defenses.py  judge.py  metrics.py  prompts.py  (+3 more)
